# molcraft

./: .gitignore  README.md  pyproject.toml  setup.py
molcraft/: __init__.py  definitions.py  layers.py  models.py  samplers.py  tokenizers.py
molcraft/layers/: __init__.py  attention.py  embedding.py
molcraft/models/: __init__.py  transformers.py
molcraft/utils/: __init__.py  metrics.py  samplers.py  tokenizers.py  vis.py
notebooks/: example.ipynb
